# cloudstorage

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  dev-requirements.txt  gcs-service-account.json.enc  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
cloudstorage/: __init__.py  base.py  blob.py  container.py  driver.py  helpers.py  messages.py  typed.py  utils.py
cloudstorage/drivers/: amazon.py  azure.py  google.py  local.py  microsoft.py  minio.py  rackspace.py
docs/: Makefile  advanced.rst  api.rst  conf.py  index.rst  installation.rst  make.bat  quick.rst  requirements.txt  supported.rst
docs/advanced/: amazon.rst  azure.rst  google.rst  local.rst  microsoft.rst  minio.rst  rackspace.rst
docs/api/: amazon.rst  blob.rst  container.rst  driver.rst  google.rst  local.rst  microsoft.rst  minio.rst  rackspace.rst
src/cloudstorage/: __init__.py  base.py  exceptions.py  helpers.py  messages.py  structures.py  typed.py  utils.py
src/cloudstorage/drivers/: __init__.py  amazon.py  digitalocean.py  google.py  local.py  microsoft.py  minio.py  owncloud.py  rackspace.py
tests/: conftest.py  helpers.py  settings.py  test_drivers.py  test_drivers_amazon.py  test_drivers_azure.py  test_drivers_digitalocean.py  test_drivers_google.py  test_drivers_local.py  test_drivers_microsoft.py  test_drivers_minio.py  test_drivers_rackspace.py  test_helpers.py  test_utils.py
tests/data/: flask.txt
tests/integration/: base.py  conftest.py  helpers.py  test_drivers_amazon.py  test_drivers_google.py  test_drivers_local.py  test_drivers_microsoft.py  test_drivers_minio.py  test_drivers_rackspace.py
tests/unit/: test_utils.py
