[bdist_wheel]
python-tag = py3

[metadata]
description-file = README.rst
license_file = LICENSE

[flake8]
ignore = F403,F405
max-line-length = 80
exclude = .eggs,.git,.tox,build,env,venv,__pycache__

[aliases]
test = pytest

[tool:pytest]
addopts = --verbose
norecursedirs=.* *.egg *.egg-info env* build docs
