[bdist_wheel]
python-tag = py3

[metadata]
name = cloudstorage
version = 0.6
description = Unified cloud storage API for storage services.
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords =
    storage
    amazon
    aws
    s3
    azure
    rackspace
    cloudfiles
    google
    cloudstorage
    gcs
license = MIT License
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Internet
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find:
setup_requires = pytest-runner
install_requires =
    azure>=3.0.0
    boto3>=1.7.60
    filelock>=3.0.0
    google-cloud-storage>=1.10.0
    inflection>=0.3.1
    itsdangerous>=0.24
    python-dateutil>=2.7.3
    python-magic>=0.4.15
    rackspacesdk>=0.7.5
    requests>=2.19.1
    rfc6266-parser>=0.0.5
    xattr>=0.9.3
tests_require =
    pytest
    prettyconf
    tox

[options.extras_require]
docs =
    sphinx
    sphinx_rtd_theme
amazon =
    boto3>=1.7.60
google =
    google-cloud-storage>=1.10.0
local =
    filelock>=3.0.0
    itsdangerous>=0.24
    xattr>=0.9.3
microsoft =
    azure>=3.0.0
rackspace =
    rackspacesdk>=0.7.5
    requests>=2.19.1
    rfc6266-parser>=0.0.5

[options.packages.find]
exclude =
    src.contrib
    src.docs
    src.tests*

[flake8]
ignore = F403,F405
max-line-length = 80
exclude = .eggs,.git,.tox,build,env,venv,__pycache__

[aliases]
test = pytest

[tool:pytest]
addopts = --verbose
norecursedirs=.* *.egg *.egg-info env* build docs
